--- a/index.html
+++ b/index.html
@@ -12,15 +12,10 @@
       window.location.href = 'login.html';
     }
   </script>
-
   <header>
     <h1>IBC Service</h1>
-    <div>
-      Welcome, <strong id="userDisplay"></strong>
-      <button id="logoutBtn">Logout</button>
-    </div>
+    <div>Welcome, <strong id="userDisplay"></strong> <button id="logoutBtn">Logout</button></div>
   </header>
-
   <section>
     <form id="customerForm" autocomplete="off" style="margin-bottom: 15px;">
       <input id="name" placeholder="Name" required />
@@ -31,26 +26,22 @@
       <input id="returnDate" type="date" />
       <button type="submit">Add Entry</button>
     </form>
-
     <div id="tabButtons" style="margin: 20px 0;">
       <button class="tab-btn active" data-status="Pending">Pending</button>
       <button class="tab-btn" data-status="Completed">Completed</button>
     </div>
-
     <input id="searchInput" placeholder="Search by any field..." />
-
     <button id="printBtn" style="margin: 10px 0;">Print List</button>
-    
     <table id="customerTable" border="1" style="width: 100%; border-collapse: collapse; margin-top: 10px;">
       <thead>
         <tr>
-          <th>Name</th><th>Email</th><th>Phone</th><th>Service</th><th>Entry Date</th><th>Return Date</th><th>Status</th>
+          <th>Name</th><th>Email</th><th>Phone</th><th>Service</th>
+          <th>Entry Date</th><th>Return Date</th><th>Status</th>
         </tr>
       </thead>
       <tbody></tbody>
     </table>
   </section>
-
   <script src="main.js"></script>
 </body>
 </html>
